test/2/type/sub-sig-field.err
type error: test/2/type/sub-sig-field.ploy:1:15-23: type annotation actual struct has 2 fields; expected 0. actual type: (Int Int)
  f:()%Int = fn (Int Int)%Int 0@$;
                ~~~~~~~~~
note: test/2/type/sub-sig-field.ploy:1:3-4: expected type: ()
  f:()%Int = fn (Int Int)%Int 0@$;
    ~~
